--- a/scss/_literatura.scss
+++ b/scss/_literatura.scss
@@ -8,23 +8,51 @@
         position: relative;
     }
     
-    .rowReverse {
-        flex-direction: row-reverse;
-    }
+
     
     .literature__container--bookImg {
         width:20%;
+
+        img {
+            width: 150px;
+            height:238px;
+            margin-left: 50px;
+        }
     }
-    
-    .literature__container--bookImg img {
-        width: 150px;
-        height:238px;
-        margin-left: 50px;
-    }
-    
+
+
+
     .literature__container--bookDesc{
         color: white;
         text-shadow: 5px 5px 10px black;
         width: 70%;
+
+        .literature__container__bookDesc--info {
+            font-size: 1.3em;
+            background-color: $greyNav;
+            border-radius: 5px;
+            color: darkgrey;
+            border: 2px solid darkgray;
+            text-decoration: none;
+            padding: 0px 5px;
+            text-shadow: 0px 0px 0px;
+            position: absolute;
+            top: 80%;
+            left: 80%;
+        }
+
+        .literature__container__bookDesc--info:hover {
+            border: 2px solid $greyNav;
+            background-color: darkgray;
+            color: $greyNav;
+        }
+    }
+    .rowReverse {
+        flex-direction: row-reverse;
+
+        .literature__container__bookDesc--info {
+            position: absolute;
+            left: 12%;
+        }
     }
 }
