--- a/css/styles.css
+++ b/css/styles.css
@@ -154,14 +154,17 @@ main .main__homeParagraph--quoteSource {
   background-color: rgba(0, 0, 0, 0.4);
   padding: 30px;
   margin: 40px 0;
-  position: relative; }
+  position: relative;
+  border-top: 2px solid #212529;
+  border-bottom: 2px solid #212529; }
 
 .literature .literature__container--bookImg {
   width: 20%; }
   .literature .literature__container--bookImg img {
     width: 150px;
     height: 238px;
-    margin-left: 50px; }
+    margin-left: 50px;
+    border: 3px solid #212529; }
 
 .literature .literature__container--bookDesc {
   color: white;
