--- a/scss/_literatura.scss
+++ b/scss/_literatura.scss
@@ -6,6 +6,8 @@
         padding: 30px;
         margin: 40px 0;
         position: relative;
+        border-top: 2px solid $greyNav;
+        border-bottom: 2px solid $greyNav;
     }
     
 
@@ -17,6 +19,7 @@
             width: 150px;
             height:238px;
             margin-left: 50px;
+            border: 3px solid $greyNav;
         }
     }
 
