--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+@media (max-width: 350px) {
+  .header__banner--title {
+    padding: 0;
+    margin: 0; }
+  .main__cover--carouselImage {
+    width: 150px; } }
+
 @media (max-width: 720px) {
   .header__banner {
     height: 160px; }
@@ -58,7 +65,7 @@
     border-top-left-radius: 15px; }
   .footer .footer__list--items {
     display: block;
-    z-index: 100; }
+    z-index: 10000; }
   .footer .footer__list--icons {
     width: 30px;
     padding: 2px; }
