--- a/scss/_mediaQueries.scss
+++ b/scss/_mediaQueries.scss
@@ -1,3 +1,13 @@
+@media (max-width: 350px) {
+    .header__banner--title {
+        padding: 0;
+        margin: 0;
+    }
+    .main__cover--carouselImage {
+        width: 150px;
+    }
+}
+
 @media (max-width: 720px) {
     
     .header__banner{
