--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,12 @@
     width: 20px;
     padding: 1px; } }
 
+@media (max-width: 350px) {
+  h1 {
+    padding: 0px; }
+  .main__cover--carouselImage {
+    width: 150px; } }
+
 @media (min-width: 1450px) {
   .header__banner {
     background-repeat: no-repeat;
