--- a/scss/_biografia.scss
+++ b/scss/_biografia.scss
@@ -1,13 +1,15 @@
 .biography {
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.6);
     padding: 30px;
-    margin-bottom: 10px;
     border-radius: 50px;
+    max-width: 1248px;
+    margin-bottom: 90px;
 
     .biography__title {
         @include titles($titleSize - .5rem);
         color: white;
         padding: 20px;
+        border-bottom: 2px solid white;
     }
 
     .biography__paragraph {
